fix blogpost overflow scrolling
fix blog post previous/next navigation in gatsby-node

--- a/src/style.css
+++ b/src/style.css
@@ -111,11 +111,14 @@ img {
 }
 
 .blogpost-wrap {
+	height: 76vh;
 	display: grid;
-	grid-template-rows: 550px 100px;
+	grid-template-rows: 85% 15%;
+	grid-gap: 0.2rem;
 }
 
 .blogpost-content {
+	height: 100%;
 	overflow: scroll;
 }
 
